Maybe fix filter hidden by address bar on mobile

--- a/apps/web/src/styles.css
+++ b/apps/web/src/styles.css
@@ -1,3 +1,8 @@
+#root, body, html {
+  height: 100%;
+  width: 100%;
+}
+
 html {
   -webkit-text-size-adjust: 100%;
   font-family:
